# FocusFlow

./: .gitignore  README.md  amplify.yml  body.json  output.json  package-lock.json
agents/: README.md  pyproject.toml
agents/src/: __main__.py  config.py  mcp_client.py  server.py
agents/src/agents/: __init__.py  aws_learning.py  breakdown.py  coach.py  orchestrator.py  planner.py  review.py
backend/: package-lock.json  package.json
backend/src/: local-server.ts
backend/src/agents/: index.ts
backend/src/cognito-triggers/: create-auth-challenge.ts  define-auth-challenge.ts  pre-sign-up.ts  verify-auth-challenge.ts
backend/src/handlers/: agents.ts  ai.ts  analytics.ts  auth.ts  notifications.ts  planner.ts  tasks.ts
backend/src/services/: bedrock.ts  dynamodb.ts
backend/src/utils/: auth.ts  logger.ts  response.ts  validation.ts
docs/: architecture-diagram.drawio  architecture.md  article.md  bedrock-setup.md  deployment-guide.md  mcp-strands-guide.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: index.ts  useAI.ts  useAnalytics.ts  useKeyboard.ts  useNotifications.ts  useTasks.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: constants.ts  utils.ts
infrastructure/: samconfig.toml  template.yaml
infrastructure/cdk/: package-lock.json  package.json  tsconfig.json
mcp-server/: package.json
mcp-server/src/: index.ts  store.ts
(+93 files in other folders)
