[project]
name = "focusflow-agents"
version = "1.0.0"
description = "Strands Agents for AI FocusFlow - agentic productivity assistants with MCP tool integration"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=1.20.0",
    "strands-agents-tools>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
